{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 41,
  "lineage": "e5d8f124-4000-78a6-f45d-bdef1e96750d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:loadbalancer/app/nest-js-ez-backend-alb/4c4c01564599c44d",
            "arn_suffix": "app/nest-js-ez-backend-alb/4c4c01564599c44d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nest-js-ez-backend-alb-1260139664.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:loadbalancer/app/nest-js-ez-backend-alb/4c4c01564599c44d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nest-js-ez-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05b9b8f5b0ea6ea4f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f3d684c5808a14d"
              },
              {
                "subnet_id": "subnet-030c0ef83cd468a26"
              }
            ],
            "subnets": [
              "subnet-00f3d684c5808a14d",
              "subnet-030c0ef83cd468a26"
            ],
            "tags": {
              "Name": "nest-js-ez-backend-alb"
            },
            "tags_all": {
              "Name": "nest-js-ez-backend-alb"
            },
            "vpc_id": "vpc-004e5358ef24ed856",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:listener/app/nest-js-ez-backend-alb/4c4c01564599c44d/b29e7e633985bd8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:targetgroup/nest-js-ez-backend-tg/b5889cc2de49d9cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:listener/app/nest-js-ez-backend-alb/4c4c01564599c44d/b29e7e633985bd8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:loadbalancer/app/nest-js-ez-backend-alb/4c4c01564599c44d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:targetgroup/nest-js-ez-backend-tg/b5889cc2de49d9cd",
            "arn_suffix": "targetgroup/nest-js-ez-backend-tg/b5889cc2de49d9cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:targetgroup/nest-js-ez-backend-tg/b5889cc2de49d9cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:787959421214:loadbalancer/app/nest-js-ez-backend-alb/4c4c01564599c44d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nest-js-ez-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-004e5358ef24ed856"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:787959421214:security-group/sg-0479f17150bd43e3e",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0479f17150bd43e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic on container port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "nest-js-ez-backend-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "787959421214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nest-js-ez-backend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nest-js-ez-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004e5358ef24ed856"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-385585549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b9b8f5b0ea6ea4f",
            "security_group_rule_id": "sgr-0ffe56ca92df352c9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}